# etka-parts-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  install_autostart.ps1  pyproject.toml  run_bot.bat  run_hidden.vbs
src/etka_bot/: __init__.py  bot.py  config.py  main.py
src/etka_bot/handlers/: __init__.py  parts.py
src/etka_bot/services/: __init__.py  audio.py  claude.py  emex.py  openai.py  parts.py  parts_advisor.py  superetka.py
